--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><a 
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -159,6 +159,10 @@
                         />
                         <h3 class="about-tab__heading">
                             <span>Blake Yeboah</span> - Front End Developer
+                        </h3>
+                        <h3 class="about-tab__heading mobile-heading">
+                            <span>Blake Yeboah</span>
+                            Front End Developer
                         </h3>
                         <p class="about-tab__paragraph">
                             I am a passionate front end developer based in
@@ -412,7 +416,7 @@
                 <h2 class="section__heading">My Socials</h2>
             </div>
             <div class="social-section__grid">
-                <a
+                <a target="_blank" 
                     href="https://www.linkedin.com/in/blake-yeboah/"
                     class="social-section__card"
                     ><svg
@@ -431,7 +435,7 @@
                     </svg>
                     LinkedIn
                 </a>
-                <a
+                <a target="_blank" 
                     href="https://github.com/Blake-K-Yeboah"
                     class="social-section__card"
                     ><svg
@@ -450,7 +454,7 @@
                     </svg>
                     GitHub</a
                 >
-                <a
+                <a target="_blank" 
                     href="https://twitter.com/BlakeYeboah"
                     class="social-section__card"
                     ><svg
@@ -467,7 +471,7 @@
                     </svg>
                     Twitter</a
                 >
-                <a
+                <a target="_blank" 
                     href="https://hashnode.com/@BlakeYeboah"
                     class="social-section__card"
                     ><svg
@@ -515,7 +519,7 @@
                 </div>
                 <div class="project-modal__img-section">
                     <div class="project-modal__img-section-overlay"></div>
-                    <a class="project-modal__button" id="live-project" href="#">
+                    <a target="_blank" class="project-modal__button" id="live-project" href="#">
                         <svg
                             width="24"
                             height="24"
@@ -534,7 +538,7 @@
                         </svg>
                         Live Project
                     </a>
-                    <a class="project-modal__button" id="source-code" href="#">
+                    <a target="_blank" class="project-modal__button" id="source-code" href="#">
                         <svg
                             width="24"
                             height="24"
@@ -641,7 +645,7 @@
                 action="https://formspree.io/moqvbrrl"
                 method="POST"
             >
-                <div class="contact-us__form-alert">
+                <div class="contact-us__form-alert" id="error">
                     There was an issue with your submission.
                     <div class="contact-us__form-alert-close">x</div>
                 </div>
