--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><a 
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -416,7 +416,8 @@
                 <h2 class="section__heading">My Socials</h2>
             </div>
             <div class="social-section__grid">
-                <a target="_blank" 
+                <a
+                    target="_blank"
                     href="https://www.linkedin.com/in/blake-yeboah/"
                     class="social-section__card"
                     ><svg
@@ -435,7 +436,8 @@
                     </svg>
                     LinkedIn
                 </a>
-                <a target="_blank" 
+                <a
+                    target="_blank"
                     href="https://github.com/Blake-K-Yeboah"
                     class="social-section__card"
                     ><svg
@@ -454,7 +456,8 @@
                     </svg>
                     GitHub</a
                 >
-                <a target="_blank" 
+                <a
+                    target="_blank"
                     href="https://twitter.com/BlakeYeboah"
                     class="social-section__card"
                     ><svg
@@ -471,7 +474,8 @@
                     </svg>
                     Twitter</a
                 >
-                <a target="_blank" 
+                <a
+                    target="_blank"
                     href="https://hashnode.com/@BlakeYeboah"
                     class="social-section__card"
                     ><svg
@@ -519,7 +523,12 @@
                 </div>
                 <div class="project-modal__img-section">
                     <div class="project-modal__img-section-overlay"></div>
-                    <a target="_blank" class="project-modal__button" id="live-project" href="#">
+                    <a
+                        target="_blank"
+                        class="project-modal__button"
+                        id="live-project"
+                        href="#"
+                    >
                         <svg
                             width="24"
                             height="24"
@@ -538,7 +547,12 @@
                         </svg>
                         Live Project
                     </a>
-                    <a target="_blank" class="project-modal__button" id="source-code" href="#">
+                    <a
+                        target="_blank"
+                        class="project-modal__button"
+                        id="source-code"
+                        href="#"
+                    >
                         <svg
                             width="24"
                             height="24"
