--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
   </head>
   <body>
-    <a id="instagram-link" style="display:none" href="https://www.blakeyeboah.com/" download>View in browser</a>
+    <a id="instagram-link" style="display:none" href="/#" download>View in browser</a>
     <nav class="navbar">
       <div class="navbar__content">
         <a class="navbar__brand" href="#home">BLAKE</a>
